--- a/src/partials/vite-promo.html
+++ b/src/partials/vite-promo.html
@@ -1,6 +1,6 @@
 <section class="vite-promo">
   <div class="container">
-    <div class="vite-promo-thumb">
+    <!-- <div class="vite-promo-thumb">
       <a
         class="vite-promo-link"
         href="https://vitejs.dev/"
@@ -9,8 +9,8 @@
         aria-label="Link to Vite official website"
         title="Vite.js  build tool"
       >
-        <!-- Path to images as from index.html file -->
-        <img
+        Path to images as from index.html file -->
+    <!-- <img
           class="pic"
           src="img/vite-logo.png"
           alt="Vite logo"
@@ -18,10 +18,10 @@
           height="640"
         />
       </a>
-    </div>
+    </div> -->
     <h1 class="main-title">
-      <span class="main-title-gradient">Vite</span>
-      Template by
+      <span class="main-title-gradient">Home work JS</span>vers. 10
+      <!-- Template by
       <a
         class="main-title-link"
         href="https://github.com/goitacademy/vanilla-app-template"
@@ -29,7 +29,7 @@
         rel="noopener noreferrer"
       >
         GoIT
-      </a>
+      </a> -->
     </h1>
   </div>
 </section>
